# Picacomic-Crawler

./: .gitignore  README.md  config.json  picacomic_api.py  pyproject.toml  setup.py  test_download_fix.py  ultimate-plugin.json  ultimate_provider.py
assets/option/: option_example.yml
src/picacomic/: __init__.py  cl.py  picacomic_api.py  picacomic_client_impl.py  picacomic_client_interface.py  picacomic_config.py  picacomic_downloader.py  picacomic_entity.py  picacomic_exception.py  picacomic_option.py  picacomic_plugin.py  picacomic_toolkit.py
tests/: test_config.py  test_runner.py
tests/test/其他测试/results/: comic_detail_20260304_231321.json  comic_detail_20260304_231801.json  comic_detail_20260304_232039.json  episode_20260304_231321.json  episode_20260304_231801.json  episode_20260304_232039.json  option_20260304_231321.json  option_20260304_231801.json  option_20260304_232039.json  search_20260304_231321.json  search_20260304_231801.json  search_20260304_232039.json
tests/test/测试1/results/: core_search_comics_20260304_225950.json  core_search_comics_20260304_230026.json  core_search_comics_20260304_230154.json  core_search_comics_20260304_230346.json  (+3 more)
tests/test_results/: test_summary_20260304_225950.json  test_summary_20260304_230026.json  test_summary_20260304_230154.json  test_summary_20260304_230346.json  test_summary_20260304_231321.json  test_summary_20260304_231801.json  test_summary_20260304_232039.json
usage/: advanced_usage.py  api_usage.py  check_tags.py  download_usage.py  simple_usage.py  workflow_download.py
(+14 files in other folders)
